src/test/ui/mismatched_types/closure-mismatch.nll.stderr
error: higher-ranked subtype error
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^^^^^^^^^

error: aborting due to 2 previous errors

